fix padding overflowing subtotal component

--- a/src/Subtotal.css
+++ b/src/Subtotal.css
@@ -2,12 +2,13 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  width: 300px;
-  height: 100px;
+  width: 100%;
+  height: 100%;
   padding: 20px;
   background-color: #f3f3f3;
   border: 1px solid #dddddd;
   border-radius: 3px;
+  box-sizing: border-box;
 }
 
 .subtotal__gift {
